--- a/index.html
+++ b/index.html
@@ -20,7 +20,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Partly Cloudy"
+            />
+            12 °C|°F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/PossumCodes/Improved-Weather-App"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Lana Roelandts
+      </small>
     </div>
   </body>
   <script src="src/app.js"></script>
