Styled main elements of the page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -32,7 +38,7 @@
               src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
               alt="Partly Cloudy"
             />
-            12 °C|°F
+            12 °C | °F
           </div>
           <div class="col-6">
             <ul>
@@ -42,15 +48,15 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/PossumCodes/Improved-Weather-App"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Lana Roelandts
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/PossumCodes/Improved-Weather-App"
-          target="_blank"
-          >Open-source code</a
-        >
-        by Lana Roelandts
-      </small>
     </div>
   </body>
   <script src="src/app.js"></script>
