Styled temperature section of page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                   id="icon"
                 />
                 <div>
-                  <strong id="temperature">12</strong>
-                  <span class="units"> °C | °F</span>
+                  <strong id="temperature">12</strong
+                  ><span class="units"
+                    >°C | <a href="#" class="fahrenheit-link"> °F</a></span
+                  >
                 </div>
               </div>
             </div>
