--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Partly Cloudy"
-                  id="icon"
-                />
+                <img src="" alt="Partly Cloudy" id="icon" />
                 <div>
                   <strong id="temperature"></strong
                   ><span class="units"
