--- a/index.html
+++ b/index.html
@@ -76,24 +76,8 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">Tue</div>
-                <img
-                  src="http://openweathermap.org/img/wn/03n@2x.png"
-                  alt=""
-                  width="42"
-                />
-                <br />
-                <div class="weather-forecast-temperature">
-                  <span class="weather-forecast-temp-max"> 18° </span>
-                  <span class="weather-forecast-temp-min"> 12° </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+          <div class="weather-forecast" id="forecast">
+            
         <small>
           <a
             href="https://github.com/PossumCodes/Improved-Weather-App"
