Displaying the forecast date

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast">
-            
+          <div class="weather-forecast" id="forecast"></div>
+        </div>
         <small>
           <a
             href="https://github.com/PossumCodes/Improved-Weather-App"
